--- a/MVC.Endpoint/Views/RootUser/Index.cshtml
+++ b/MVC.Endpoint/Views/RootUser/Index.cshtml
@@ -17,7 +17,7 @@
 <div style="width:100wh;height:100vh; padding-top:50px;background-repeat:no-repeat" class="bg-dark d-flex row">
 
     <div class="col-5" style="padding-right:200px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px">
-        <a class="btn btn-danger" style="width:400px;height:400px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px" asp-action="index" asp-controller="Card">موجودی</a>
+        <a class="btn btn-danger" style="width:400px;height:400px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px" asp-action="Balans" asp-controller="Card">موجودی</a>
     </div>
 
 
