--- a/MVC.Endpoint/Views/RootUser/Index.cshtml
+++ b/MVC.Endpoint/Views/RootUser/Index.cshtml
@@ -5,12 +5,12 @@
 <div style="width:100wh;height:100vh; padding-top:50px;background-repeat:no-repeat" class="bg-dark d-flex row">
 
     <div class="col-5" style="padding-right:200px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px">
-        <a class="btn btn-primary" style="width:400px;height:400px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px" asp-action="index" asp-controller="Card">لیست تراکنش ها</a>
+        <a class="btn btn-primary" style="width:400px;height:400px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px" asp-action="Index" asp-controller="Transaction">لیست تراکنش ها</a>
     </div>
 
 
     <div class="col-5" style="padding-right:200px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px">
-        <a class="btn btn-success" style="width:400px;height:400px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px" asp-action="index" asp-controller="Transaction"> کارت به کارت</a>
+        <a class="btn btn-success" style="width:400px;height:400px; align-content:center;align-items:center;justify-content:center;text-align:center;font-size:16px" asp-action="CardToCard" asp-controller="Card"> کارت به کارت</a>
     </div>
 </div>
 
